# math

./: .gitignore  CMakeLists.txt  README.md
docs/: AUTOGRAD_DESIGN.md  C++ 数学库开发规划.md  CONV_DESIGN.md  DEVELOPMENT_PLAN.md  OPTIMIZER_DESIGN.md  PHASE3_DESIGN.md  PHASE4_DESIGN.md  PHASE5_DESIGN.md  TENSOR_DESIGN.md  概率论模块扩展规划.md  深度学习数学库开发路线图.md
examples/: CMakeLists.txt
include/math/autograd/: functional.hpp  ops.hpp  variable.hpp
include/math/calculus/: differentiation.hpp  integration.hpp  ode.hpp
include/math/core/: constants.hpp  functions.hpp  special.hpp  utils.hpp
include/math/linalg/: decomposition.hpp  matrix.hpp  solver.hpp  vector.hpp
include/math/nn/: activations.hpp  conv.hpp  init.hpp  loss.hpp
include/math/optim/: optimizer.hpp
include/math/probability/: distributions.hpp  statistics.hpp
include/math/tensor/: tensor.hpp
python/: CMakeLists.txt  README.md  pyproject.toml  setup.py
python/examples/: dataloader_example.py  save_load_example.py  xor_example.py
python/mathlib/: __init__.py  _mathlib.cp312-win_amd64.pyd  nn_module.py
python/src/: bind_autograd.cpp  bind_nn.cpp  bind_optim.cpp  bind_tensor.cpp  module.cpp
python/tests/: test_mathlib.py
tests/: CMakeLists.txt  test_activations.cpp  test_autograd.cpp  test_conv.cpp  test_core.cpp  test_differentiation.cpp  test_distributions.cpp  test_init.cpp  test_integration.cpp  test_linalg.cpp  test_loss.cpp  test_ode.cpp  test_optim.cpp  test_solver.cpp  test_special.cpp  test_statistics.cpp  test_tensor.cpp
